--- a/Stopwatch/app/src/main/res/layout/activity_stopwatch.xml
+++ b/Stopwatch/app/src/main/res/layout/activity_stopwatch.xml
@@ -43,5 +43,13 @@
             android:layout_marginTop="8dp"
             android:onClick="onClickReset"
             android:text="@string/reset" />
+
+        <Button
+            android:id="@+id/dialog_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:onClick="onClickdialog"
+            android:text="@string/pause" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
