update kotlin  starbuzz

--- a/Starbuzz/app/src/main/res/layout/activity_drink_category.xml
+++ b/Starbuzz/app/src/main/res/layout/activity_drink_category.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".DrinkCategoryActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/list_drinks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
