--- a/Starbuzz/app/src/main/res/layout/activity_drink.xml
+++ b/Starbuzz/app/src/main/res/layout/activity_drink.xml
@@ -33,4 +33,16 @@
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
+
+    <CheckBox
+        android:id="@+id/favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="17dp"
+        android:checked="false"
+        android:text="@string/favorite"
+        android:onClick="onFavoriteClicked"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
 </android.support.constraint.ConstraintLayout>
