--- a/Odometer/app/src/main/res/layout/activity_main.xml
+++ b/Odometer/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/distance"
-        android:layout_width=" "
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="8dp"
