--- a/Stopwatch/app/src/main/res/layout/activity_stopwatch.xml
+++ b/Stopwatch/app/src/main/res/layout/activity_stopwatch.xml
@@ -9,7 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <TextView
             android:id="@+id/time_view"
@@ -51,5 +53,6 @@
             android:layout_marginTop="50dp"
             android:onClick="onClickdialog"
             android:text="@string/pause" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
