--- a/joke/app/src/main/res/layout/activity_main.xml
+++ b/joke/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,9 @@
         android:onClick="onClick"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/list_my"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
